--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,8 @@
-
 body {
-  font-family: 'Lato', sans-serif;
-    
+  font-family: "Lato", sans-serif;
+
   color: #000;
-    background-color: #fbfbfb; /*cream background */
+  background-color: #fbfbfb; /*cream background */
 }
 
 a {
@@ -15,8 +14,13 @@ a:hover {
   text-decoration: none;
 }
 
-
-
+.container {
+  margin-right: 1rem;
+  margin-left: 2rem;
+}
+.bottom-border {
+  border-bottom: 1px solid rgba(212, 212, 212, 0.815);
+}
 /*--------------------------------------------------------------
 # Back to top button animation for middle content
 --------------------------------------------------------------*/
@@ -46,7 +50,64 @@ a:hover {
   background: #002366;
   transition: background 0.2s ease-in-out;
 }
-
+/* 
+  stripe
+*/
+.stripe {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.3rem 0rem;
+}
+.social_media_icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social_media_icons i {
+  color: #dadada;
+  padding: 0rem 0.5rem;
+  transition: 0.5s;
+}
+.social_media_icons i:hover {
+  color: #a1a1a1;
+}
+.bottom-clip{
+  transition:0.5s;
+}
+.bottom-clip:hover:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -20px;
+  z-index:100000;
+  translate: translateX(50%);
+  width: 0px;
+  height: 0px;
+  /* background: rgb(228, 228, 228); */
+  border-style: solid;
+  
+  border-width:10px 10px 0px 10px;
+  border-color: #ffffff transparent transparent;
+}
+.menu_strip {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.strip_menu {
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.strip_menu li {
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem;
+  border-right: 1px solid rgba(212, 212, 212, 0.815);
+}
 
 /*--------------------------------------------------------------
 # Header
@@ -64,12 +125,12 @@ a:hover {
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
-
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
 /* Desktop Navigation */
-.nav-menu, .nav-menu * {
+.nav-menu,
+.nav-menu * {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -88,16 +149,16 @@ a:hover {
   padding: 12px 15px;
   transition: 0.3s;
   font-size: 17px;
-  font-family: 'Lato', sans-serif;
-    font-weight: 500;
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
 }
 
-.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu .active > a,
+.nav-menu li:hover > a {
   color: #002366;
   font-weight: bold;
 }
-
-
 
 /* Mobile Navigation */
 .mobile-nav {
@@ -127,12 +188,12 @@ a:hover {
   font-weight: 500;
 }
 
-.mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
+.mobile-nav a:hover,
+.mobile-nav .active > a,
+.mobile-nav li:hover > a {
   color: #9eccf4;
   text-decoration: none;
 }
-
-
 
 .mobile-nav-toggle {
   position: fixed;
@@ -177,8 +238,6 @@ a:hover {
   color: #fff;
 }
 
-
-
 #footer {
   background: #002366;
   padding: 0 0 30px 0;
@@ -216,7 +275,7 @@ a:hover {
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0F9D58;
+  background: #0f9d58;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -275,9 +334,6 @@ a:hover {
   display: inline-block;
   line-height: 1;
 }
-
-
-
 
 #footer .copyright {
   text-align: center;
